k8s/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  strategy: {}
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - image: ghcr.io/camptocamp/course_docker_frontend:latest
        name: course-docker-frontend-cnvvb
        resources: {}
        ports:
          - name: http
            containerPort: 8080
