k8s/frontend/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    app: frontend
  name: frontend
spec:
  tls:
    termination: edge
  to:
    kind: ""
    name: frontend
    weight: null
status: {}
