k8s/frontend/rule-allow-from-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-ingress
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          openshift-ingress: yes
  podSelector: {}
  policyTypes:
  - Ingress
